switched to using official wrds package

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -91,7 +91,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 5153763 rows in crsp.msf.\n",
+      "Approximately 115366 rows in crsp.msenames.\n",
+      "Approximately 36809 rows in crsp.msedelist.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -105,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "61"
+       "np.int64(61)"
       ]
      },
      "execution_count": null,
@@ -161,28 +173,28 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>permno</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>INTEGER</td>\n",
        "      <td>crsp</td>\n",
        "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>permco</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>INTEGER</td>\n",
        "      <td>crsp</td>\n",
        "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>issuno</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>INTEGER</td>\n",
        "      <td>crsp</td>\n",
        "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>hexcd</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>SMALLINT</td>\n",
        "      <td>crsp</td>\n",
        "      <td>msf</td>\n",
        "    </tr>\n",
@@ -191,12 +203,12 @@
        "</div>"
       ],
       "text/plain": [
-       "     name              type wrds_library wrds_table\n",
-       "0   cusip        VARCHAR(8)         crsp        msf\n",
-       "1  permno  DOUBLE_PRECISION         crsp        msf\n",
-       "2  permco  DOUBLE_PRECISION         crsp        msf\n",
-       "3  issuno  DOUBLE_PRECISION         crsp        msf\n",
-       "4   hexcd  DOUBLE_PRECISION         crsp        msf"
+       "     name        type wrds_library wrds_table\n",
+       "0   cusip  VARCHAR(8)         crsp        msf\n",
+       "1  permno     INTEGER         crsp        msf\n",
+       "2  permco     INTEGER         crsp        msf\n",
+       "3  issuno     INTEGER         crsp        msf\n",
+       "4   hexcd    SMALLINT         crsp        msf"
       ]
      },
      "execution_count": null,
@@ -282,9 +294,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 5153763 rows in crsp.msf.\n",
+      "Approximately 115366 rows in crsp.msenames.\n",
+      "Approximately 36809 rows in crsp.msedelist.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'c.dlret,b.naics,b.siccd,a.ret'"
+       "'b.naics,a.ret,c.dlret,b.siccd'"
       ]
      },
      "execution_count": null,
@@ -302,6 +325,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 5153763 rows in crsp.msf.\n",
+      "Approximately 115366 rows in crsp.msenames.\n",
+      "Approximately 36809 rows in crsp.msedelist.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -360,6 +394,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 5153763 rows in crsp.msf.\n",
+      "Approximately 115366 rows in crsp.msenames.\n",
+      "Approximately 36809 rows in crsp.msedelist.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -407,26 +454,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>68391610</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>7952.0</td>\n",
-       "      <td>10396.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3990.0</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>7952</td>\n",
+       "      <td>10396</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3990</td>\n",
        "      <td>1985-12-31</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -434,14 +481,14 @@
        "</div>"
       ],
       "text/plain": [
-       "      cusip   permno  permco   issuno  hexcd  hsiccd        date  bidlo  \\\n",
-       "0  68391610  10000.0  7952.0  10396.0    3.0  3990.0  1985-12-31    NaN   \n",
+       "      cusip  permno  permco  issuno  hexcd  hsiccd        date  bidlo  askhi  \\\n",
+       "0  68391610   10000    7952   10396      3    3990  1985-12-31   <NA>   <NA>   \n",
        "\n",
-       "   askhi  prc  ...  nwperm  nwcomp  nextdt  dlamt  dlretx  dlprc  dlpdt  \\\n",
-       "0    NaN  NaN  ...     NaN     NaN    None    NaN     NaN    NaN   None   \n",
+       "    prc  ...  nwperm  nwcomp  nextdt  dlamt  dlretx  dlprc  dlpdt  dlret  \\\n",
+       "0  <NA>  ...    <NA>    <NA>    <NA>   <NA>    <NA>   <NA>   <NA>   <NA>   \n",
        "\n",
-       "   dlret  acperm accomp  \n",
-       "0    NaN    None   None  \n",
+       "   acperm accomp  \n",
+       "0    <NA>   <NA>  \n",
        "\n",
        "[1 rows x 48 columns]"
       ]
@@ -610,9 +657,15 @@
     "    \"\"\"Adjusts for returns for delisting using Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
     "    df['npdelist'] = (df['dlstcd']==500) | df['dlstcd'].between(520,584)\n",
-    "    df['dlret'] = np.where(df['dlret'].isna() & df['npdelist'] & df['exchcd'].isin([1,2]), -0.35, df['dlret'])\n",
-    "    df['dlret'] = np.where(df['dlret'].isna() & df['npdelist'] & df['exchcd'].isin([3]), -0.55, df['dlret'])\n",
-    "    df['dlret'] = np.where(df['dlret'].notna() & df['dlret'] < -1, -1, df['dlret'])\n",
+    "    \n",
+    "    cond12 = df['dlret'].isna() & df['npdelist'].fillna(False) & df['exchcd'].isin([1, 2])\n",
+    "    df.loc[cond12, 'dlret'] = -0.35\n",
+    "    \n",
+    "    cond3 = df['dlret'].isna() & df['npdelist'].fillna(False) & df['exchcd'].isin([3])\n",
+    "    df.loc[cond3, 'dlret'] = -0.55\n",
+    "    \n",
+    "    df.loc[df['dlret'].notna() & (df['dlret'] < -1), 'dlret'] = -1\n",
+    "    \n",
     "    df['dlret'] = df['dlret'].fillna(0)\n",
     "\n",
     "    df[adj_ret_var] = (1 + df.ret) * (1 + df['dlret']) - 1\n",
@@ -626,6 +679,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 5153763 rows in crsp.msf.\n",
+      "Approximately 115366 rows in crsp.msenames.\n",
+      "Approximately 36809 rows in crsp.msedelist.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -650,12 +716,12 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>exchcd</th>\n",
+       "      <th>dlstdt</th>\n",
+       "      <th>ret</th>\n",
        "      <th>naics</th>\n",
        "      <th>dlret</th>\n",
-       "      <th>dlstdt</th>\n",
-       "      <th>exchcd</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>ret</th>\n",
        "      <th>siccd</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
@@ -681,7 +747,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, naics, dlret, dlstdt, exchcd, dlstcd, ret, siccd, ret_adj]\n",
+       "Columns: [date, dtdate, dlstcd, exchcd, dlstdt, ret, naics, dlret, siccd, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -771,8 +837,8 @@
        "      <th>10000</th>\n",
        "      <th>1985-12</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -781,7 +847,7 @@
       "text/plain": [
        "                ret_adj  lbhret12  retvol12\n",
        "permno Mdate                               \n",
-       "10000  1985-12      NaN       NaN       NaN"
+       "10000  1985-12      NaN      <NA>      <NA>"
       ]
      },
      "execution_count": null,
