--- a/nbs/01_wrds/06_ibes_ltg.ipynb
+++ b/nbs/01_wrds/06_ibes_ltg.ipynb
@@ -124,7 +124,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 34393864 rows in ibes.detu_epsus.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -138,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "21"
+       "np.int64(21)"
       ]
      },
      "execution_count": null,
@@ -195,6 +205,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 34393864 rows in ibes.detu_epsus.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -253,6 +272,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 34393864 rows in ibes.detu_epsus.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -293,13 +323,13 @@
        "      <td>2019-01-04</td>\n",
        "      <td>-174.4</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>2019-01-04</td>\n",
        "      <td>2019-01-04</td>\n",
        "      <td>183.0</td>\n",
        "      <td>48368.0</td>\n",
        "      <td>D</td>\n",
-       "      <td>14392.0</td>\n",
+       "      <td>14392</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -307,10 +337,10 @@
       ],
       "text/plain": [
        "  ticker     anndats  value fpi fpedats     revdats     actdats  estimator  \\\n",
-       "0   0001  2019-01-04 -174.4   0    None  2019-01-04  2019-01-04      183.0   \n",
+       "0   0001  2019-01-04 -174.4   0    <NA>  2019-01-04  2019-01-04      183.0   \n",
        "\n",
-       "    analys pdf   permno  \n",
-       "0  48368.0   D  14392.0  "
+       "    analys pdf  permno  \n",
+       "0  48368.0   D   14392  "
       ]
      },
      "execution_count": null,
