--- a/nbs/01_wrds/07_bondret.ipynb
+++ b/nbs/01_wrds/07_bondret.ipynb
@@ -86,7 +86,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 3854028 rows in wrdsapps.bondret.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -135,7 +145,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>issue_id</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>wrdsapps</td>\n",
        "      <td>bondret</td>\n",
        "    </tr>\n",
@@ -156,7 +166,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>bsym</td>\n",
-       "      <td>VARCHAR(12)</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>wrdsapps</td>\n",
        "      <td>bondret</td>\n",
        "    </tr>\n",
@@ -167,10 +177,10 @@
       "text/plain": [
        "          name              type wrds_library wrds_table\n",
        "0         date              DATE     wrdsapps    bondret\n",
-       "1     issue_id  DOUBLE_PRECISION     wrdsapps    bondret\n",
+       "1     issue_id  DOUBLE PRECISION     wrdsapps    bondret\n",
        "2        cusip        VARCHAR(9)     wrdsapps    bondret\n",
        "3  bond_sym_id       VARCHAR(14)     wrdsapps    bondret\n",
-       "4         bsym       VARCHAR(12)     wrdsapps    bondret"
+       "4         bsym  DOUBLE PRECISION     wrdsapps    bondret"
       ]
      },
      "execution_count": null,
@@ -222,9 +232,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 3854028 rows in wrdsapps.bondret.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'a.date,a.issue_id,a.cusip,a.bond_sym_id,a.bsym,a.isin,a.company_symbol,a.bond_type,a.security_level,a.conv,a.offering_date,a.offering_amt,a.offering_price,a.principal_amt,a.maturity,a.treasury_maturity,a.coupon,a.day_count_basis,a.dated_date,a.first_interest_date,a.last_interest_date,a.ncoups,a.amount_outstanding,a.r_sp,a.r_mr,a.r_fr,a.n_sp,a.n_mr,a.n_fr,a.rating_num,a.rating_cat,a.rating_class,a.t_date,a.t_volume,a.t_dvolume,a.t_spread,a.t_yld_pt,a.yield,a.price_eom,a.price_ldm,a.price_l5m,a.gap,a.coupmonth,a.nextcoup,a.coupamt,a.coupacc,a.multicoups,a.ret_eom,a.ret_ldm,a.ret_l5m,a.tmt,a.remcoups,a.duration,a.defaulted,a.default_date,a.default_type,a.reinstated,a.reinstated_date'"
+       "'a.date,a.issue_id,a.cusip,a.bond_sym_id,a.bsym,a.isin,a.company_symbol,a.bond_type,a.security_level,a.conv,a.offering_date,a.offering_amt,a.offering_price,a.principal_amt,a.maturity,a.treasury_maturity,a.coupon,a.day_count_basis,a.dated_date,a.first_interest_date,a.last_interest_date,a.ncoups,a.amount_outstanding,a.r_sp,a.r_mr,a.r_fr,a.n_sp,a.n_mr,a.n_fr,a.rating_num,a.rating_cat,a.rating_class,a.t_date,a.t_volume,a.t_dvolume,a.t_spread,a.t_yld_pt,a.yield,a.price_eom_flg,a.price_eom,a.price_ldm,a.price_l5m,a.gap,a.coupmonth,a.nextcoup,a.coupamt,a.coupacc,a.multicoups,a.ret_eom,a.ret_ldm,a.ret_l5m,a.tmt,a.remcoups,a.duration,a.defaulted,a.default_date,a.default_type,a.reinstated,a.reinstated_date'"
       ]
      },
      "execution_count": null,
@@ -276,7 +295,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data(nrows=1000)"
+    "#raw = get_raw_data(nrows=1000)"
    ]
   },
   {
