--- a/nbs/01_wrds/08_mergent.ipynb
+++ b/nbs/01_wrds/08_mergent.ipynb
@@ -85,7 +85,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 710057 rows in fisd.fisd_mergedissue.\n",
+      "Approximately 16935 rows in fisd.fisd_mergedissuer.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -127,14 +138,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>issue_id</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>issuer_id</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
@@ -274,21 +285,21 @@
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>gross_spread</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>selling_concession</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>reallowance</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
@@ -330,7 +341,7 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>treasury_spread</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
@@ -344,7 +355,7 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>offering_amt</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
@@ -358,14 +369,14 @@
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>offering_price</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>offering_yield</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
@@ -400,7 +411,7 @@
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>principal_amt</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>DOUBLE PRECISION</td>\n",
        "      <td>fisd</td>\n",
        "      <td>fisd_mergedissue</td>\n",
        "    </tr>\n",
@@ -480,8 +491,8 @@
       ],
       "text/plain": [
        "                      name              type wrds_library        wrds_table\n",
-       "0                 issue_id  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
-       "1                issuer_id  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
+       "0                 issue_id  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
+       "1                issuer_id  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
        "2   prospectus_issuer_name       VARCHAR(64)         fisd  fisd_mergedissue\n",
        "3             issuer_cusip        VARCHAR(6)         fisd  fisd_mergedissue\n",
        "4              issue_cusip        VARCHAR(3)         fisd  fisd_mergedissue\n",
@@ -501,25 +512,25 @@
        "18                    slob        VARCHAR(1)         fisd  fisd_mergedissue\n",
        "19    issue_offered_global        VARCHAR(1)         fisd  fisd_mergedissue\n",
        "20         settlement_type        VARCHAR(4)         fisd  fisd_mergedissue\n",
-       "21            gross_spread  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
-       "22      selling_concession  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
-       "23             reallowance  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
+       "21            gross_spread  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
+       "22      selling_concession  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
+       "23             reallowance  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
        "24      comp_neg_exch_deal        VARCHAR(4)         fisd  fisd_mergedissue\n",
        "25            rule_415_reg        VARCHAR(1)         fisd  fisd_mergedissue\n",
        "26           sec_reg_type1        VARCHAR(4)         fisd  fisd_mergedissue\n",
        "27           sec_reg_type2        VARCHAR(4)         fisd  fisd_mergedissue\n",
        "28               rule_144a        VARCHAR(1)         fisd  fisd_mergedissue\n",
-       "29         treasury_spread  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
+       "29         treasury_spread  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
        "30       treasury_maturity       VARCHAR(20)         fisd  fisd_mergedissue\n",
-       "31            offering_amt  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
+       "31            offering_amt  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
        "32           offering_date              DATE         fisd  fisd_mergedissue\n",
-       "33          offering_price  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
-       "34          offering_yield  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
+       "33          offering_price  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
+       "34          offering_yield  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
        "35           delivery_date              DATE         fisd  fisd_mergedissue\n",
        "36               unit_deal        VARCHAR(1)         fisd  fisd_mergedissue\n",
        "37             form_of_own        VARCHAR(4)         fisd  fisd_mergedissue\n",
        "38            denomination        VARCHAR(9)         fisd  fisd_mergedissue\n",
-       "39           principal_amt  DOUBLE_PRECISION         fisd  fisd_mergedissue\n",
+       "39           principal_amt  DOUBLE PRECISION         fisd  fisd_mergedissue\n",
        "40               covenants        VARCHAR(1)         fisd  fisd_mergedissue\n",
        "41                defeased        VARCHAR(1)         fisd  fisd_mergedissue\n",
        "42         defeasance_type        VARCHAR(4)         fisd  fisd_mergedissue\n",
@@ -618,9 +629,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 710057 rows in fisd.fisd_mergedissue.\n",
+      "Approximately 16935 rows in fisd.fisd_mergedissuer.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'a.security_level,a.private_placement,b.naics_code,a.bond_type,a.putable,a.issuer_cusip,a.defaulted,a.interest_frequency,a.principal_amt,a.issue_cusip,a.rule_144a,a.complete_cusip,a.offering_amt,a.treasury_maturity,a.redeemable,a.dated_date,a.coupon,a.foreign_currency,a.maturity,a.issue_id,a.isin,a.conv_commod_type,a.first_interest_date,b.sic_code,a.offering_price,a.coupon_type,a.offering_date,a.last_interest_date,b.country_domicile,b.cusip_name,a.day_count_basis,a.convertible,a.issuer_id,a.asset_backed'"
+       "'a.first_interest_date,a.rule_144a,a.coupon_type,a.convertible,b.cusip_name,a.interest_frequency,a.asset_backed,a.issuer_id,a.issuer_cusip,a.offering_date,a.maturity,a.complete_cusip,a.treasury_maturity,a.principal_amt,a.day_count_basis,a.offering_amt,a.private_placement,a.issue_id,a.isin,a.offering_price,b.naics_code,a.issue_cusip,a.bond_type,a.foreign_currency,a.coupon,a.redeemable,a.last_interest_date,a.conv_commod_type,a.dated_date,a.security_level,a.defaulted,b.sic_code,a.putable,b.country_domicile'"
       ]
      },
      "execution_count": null,
@@ -672,7 +693,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data(start_date='01/01/2022')"
+    "#raw = get_raw_data(start_date='01/01/2022')"
    ]
   },
   {
