--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -111,7 +111,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "df = gvkey_permno_m(nrows=1)"
@@ -196,17 +205,26 @@
     "                \"\"\"\n",
     "    \n",
     "    df = wrds_api.download(sql_string)\n",
-    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='A',\n",
+    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Y',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
-    "    return df.reset_index()[['permno','Adate','gvkey']].copy()  "
+    "    return df.reset_index()[['permno','Ydate','gvkey']].copy()  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "df = gvkey_permno_a(nrows=1)"
@@ -239,7 +257,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>permno</th>\n",
-       "      <th>Adate</th>\n",
+       "      <th>Ydate</th>\n",
        "      <th>gvkey</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -255,7 +273,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   permno Adate   gvkey\n",
+       "   permno Ydate   gvkey\n",
        "0   25881  1970  001000"
       ]
      },
@@ -301,7 +319,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "df = gvkey_permno_q(nrows=1)"
@@ -388,7 +415,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "ibes_permnos = ibes_ticker_permno(nrows=1)"
@@ -432,7 +468,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0000</td>\n",
-       "      <td>14471.0</td>\n",
+       "      <td>14471</td>\n",
        "      <td>87482X10</td>\n",
        "      <td>2014-02-20</td>\n",
        "      <td>2016-08-31</td>\n",
@@ -443,8 +479,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  ticker   permno    ncusip       sdate       edate  score\n",
-       "0   0000  14471.0  87482X10  2014-02-20  2016-08-31    1.0"
+       "  ticker  permno    ncusip       sdate       edate  score\n",
+       "0   0000   14471  87482X10  2014-02-20  2016-08-31    1.0"
       ]
      },
      "execution_count": null,
@@ -481,7 +517,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "cusip_permnos = bond_cusip_permno(nrows=1)"
@@ -533,7 +578,7 @@
        "      <td>2014-08-22</td>\n",
        "      <td>2014-08-22</td>\n",
        "      <td>2002-01-02</td>\n",
-       "      <td>2022-12-30</td>\n",
+       "      <td>2024-12-31</td>\n",
        "      <td>2014-08-22</td>\n",
        "      <td>2014-08-22</td>\n",
        "    </tr>\n",
@@ -546,7 +591,7 @@
        "0  000336AC1   60687   21372    2014-08-22  2014-08-22   2002-01-02   \n",
        "\n",
        "   crsp_enddt link_startdt  link_enddt  \n",
-       "0  2022-12-30   2014-08-22  2014-08-22  "
+       "0  2024-12-31   2014-08-22  2014-08-22  "
       ]
      },
      "execution_count": null,
