--- a/nbs/01_wrds/02_crspd.ipynb
+++ b/nbs/01_wrds/02_crspd.ipynb
@@ -89,7 +89,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 107663472 rows in crsp.dsf.\n",
+      "Approximately 115451 rows in crsp.dsenames.\n",
+      "Approximately 38872 rows in crsp.dsedelist.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -103,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "60"
+       "np.int64(60)"
       ]
      },
      "execution_count": null,
@@ -159,28 +171,28 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>permno</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>INTEGER</td>\n",
        "      <td>crsp</td>\n",
        "      <td>dsf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>permco</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>INTEGER</td>\n",
        "      <td>crsp</td>\n",
        "      <td>dsf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>issuno</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>INTEGER</td>\n",
        "      <td>crsp</td>\n",
        "      <td>dsf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>hexcd</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>SMALLINT</td>\n",
        "      <td>crsp</td>\n",
        "      <td>dsf</td>\n",
        "    </tr>\n",
@@ -189,12 +201,12 @@
        "</div>"
       ],
       "text/plain": [
-       "     name              type wrds_library wrds_table\n",
-       "0   cusip        VARCHAR(8)         crsp        dsf\n",
-       "1  permno  DOUBLE_PRECISION         crsp        dsf\n",
-       "2  permco  DOUBLE_PRECISION         crsp        dsf\n",
-       "3  issuno  DOUBLE_PRECISION         crsp        dsf\n",
-       "4   hexcd  DOUBLE_PRECISION         crsp        dsf"
+       "     name        type wrds_library wrds_table\n",
+       "0   cusip  VARCHAR(8)         crsp        dsf\n",
+       "1  permno     INTEGER         crsp        dsf\n",
+       "2  permco     INTEGER         crsp        dsf\n",
+       "3  issuno     INTEGER         crsp        dsf\n",
+       "4   hexcd    SMALLINT         crsp        dsf"
       ]
      },
      "execution_count": null,
@@ -281,6 +293,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 107663472 rows in crsp.dsf.\n",
+      "Approximately 115451 rows in crsp.dsenames.\n",
+      "Approximately 38872 rows in crsp.dsedelist.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'c.dlret,a.ret,b.siccd'"
@@ -301,6 +324,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 107663472 rows in crsp.dsf.\n",
+      "Approximately 115451 rows in crsp.dsenames.\n",
+      "Approximately 38872 rows in crsp.dsedelist.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -361,6 +395,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 107663472 rows in crsp.dsf.\n",
+      "Approximately 115451 rows in crsp.dsenames.\n",
+      "Approximately 38872 rows in crsp.dsedelist.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -408,26 +455,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>68391610</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>7952.0</td>\n",
-       "      <td>10396.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3990.0</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>7952</td>\n",
+       "      <td>10396</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3990</td>\n",
        "      <td>1986-01-07</td>\n",
        "      <td>2.375</td>\n",
        "      <td>2.75</td>\n",
        "      <td>-2.5625</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -435,14 +482,14 @@
        "</div>"
       ],
       "text/plain": [
-       "      cusip   permno  permco   issuno  hexcd  hsiccd        date  bidlo  \\\n",
-       "0  68391610  10000.0  7952.0  10396.0    3.0  3990.0  1986-01-07  2.375   \n",
+       "      cusip  permno  permco  issuno  hexcd  hsiccd        date  bidlo  askhi  \\\n",
+       "0  68391610   10000    7952   10396      3    3990  1986-01-07  2.375   2.75   \n",
        "\n",
-       "   askhi     prc  ...  nwperm  nwcomp  nextdt  dlamt  dlretx  dlprc  dlpdt  \\\n",
-       "0   2.75 -2.5625  ...     NaN     NaN    None    NaN     NaN    NaN   None   \n",
+       "      prc  ...  nwperm  nwcomp  nextdt  dlamt  dlretx  dlprc  dlpdt dlret  \\\n",
+       "0 -2.5625  ...    <NA>    <NA>    <NA>   <NA>    <NA>   <NA>   <NA>  <NA>   \n",
        "\n",
-       "  dlret  acperm  accomp  \n",
-       "0   NaN    None    None  \n",
+       "   acperm  accomp  \n",
+       "0    <NA>    <NA>  \n",
        "\n",
        "[1 rows x 47 columns]"
       ]
@@ -628,67 +675,30 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>dtdate</th>\n",
-       "      <th>exchcd</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>dlret</th>\n",
-       "      <th>siccd</th>\n",
-       "      <th>dlstdt</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>ret_adj</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>permno</th>\n",
-       "      <th>Ddate</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [date, dtdate, exchcd, dlstcd, naics, dlret, siccd, dlstdt, ret, ret_adj]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 107663472 rows in crsp.dsf.\n",
+      "Approximately 115451 rows in crsp.dsenames.\n",
+      "Approximately 38872 rows in crsp.dsedelist.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "boolean value of NA is ambiguous",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#| eval: false\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m dl = \u001b[43mdelist_adj_ret\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprocess_raw_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mget_raw_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdlret\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdlstcd\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdlstdt\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mexchcd\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mret\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnaics\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msiccd\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m   \n\u001b[32m      3\u001b[39m dl.head(\u001b[32m0\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 10\u001b[39m, in \u001b[36mdelist_adj_ret\u001b[39m\u001b[34m(df, adj_ret_var)\u001b[39m\n\u001b[32m      8\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mnpdelist\u001b[39m\u001b[33m'\u001b[39m] = (df[\u001b[33m'\u001b[39m\u001b[33mdlstcd\u001b[39m\u001b[33m'\u001b[39m]==\u001b[32m500\u001b[39m) | df[\u001b[33m'\u001b[39m\u001b[33mdlstcd\u001b[39m\u001b[33m'\u001b[39m].between(\u001b[32m520\u001b[39m,\u001b[32m584\u001b[39m)\n\u001b[32m      9\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m] = np.where(df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m].isna() & df[\u001b[33m'\u001b[39m\u001b[33mnpdelist\u001b[39m\u001b[33m'\u001b[39m] & df[\u001b[33m'\u001b[39m\u001b[33mexchcd\u001b[39m\u001b[33m'\u001b[39m].isin([\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m]), -\u001b[32m0.35\u001b[39m, df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdlret\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43misna\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m&\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnpdelist\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m&\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mexchcd\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43misin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m0.55\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdlret\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m] = np.where(df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m].notna() & df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m] < -\u001b[32m1\u001b[39m, -\u001b[32m1\u001b[39m, df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m     12\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m] = df[\u001b[33m'\u001b[39m\u001b[33mdlret\u001b[39m\u001b[33m'\u001b[39m].fillna(\u001b[32m0\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mmissing.pyx:392\u001b[39m, in \u001b[36mpandas._libs.missing.NAType.__bool__\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: boolean value of NA is ambiguous"
+     ]
     }
    ],
    "source": [
