--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -47,7 +47,7 @@
     "LIBRARY = 'comp'\n",
     "TABLE = 'funda'\n",
     "COMPANY_TABLE = 'company' #contains some header information that is missing from comp.funda (e.g. sic and naics) \n",
-    "FREQ = 'A'\n",
+    "FREQ = 'Y'\n",
     "MIN_YEAR = 1950\n",
     "MAX_YEAR = None\n",
     "ENTITY_ID_IN_RAW_DSET = 'gvkey'\n",
@@ -80,7 +80,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -239,9 +250,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'a.lt,a.at,b.sic'"
+       "'a.lt,b.sic,a.at'"
       ]
      },
      "execution_count": null,
@@ -299,6 +320,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -323,8 +356,8 @@
        "      <th>datadate</th>\n",
        "      <th>indfmt</th>\n",
        "      <th>sich</th>\n",
-       "      <th>at</th>\n",
        "      <th>sic</th>\n",
+       "      <th>at</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -333,17 +366,17 @@
        "      <td>001000</td>\n",
        "      <td>1961-12-31</td>\n",
        "      <td>INDL</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>3089</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate indfmt  sich    at   sic\n",
-       "0  001000  1961-12-31   INDL  None  None  3089"
+       "    gvkey    datadate indfmt  sich   sic    at\n",
+       "0  001000  1961-12-31   INDL  <NA>  3089  <NA>"
       ]
      },
      "execution_count": null,
@@ -362,6 +395,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -394,7 +439,6 @@
        "      <th>cusip</th>\n",
        "      <th>conm</th>\n",
        "      <th>...</th>\n",
-       "      <th>priusa</th>\n",
        "      <th>sic</th>\n",
        "      <th>spcindcd</th>\n",
        "      <th>spcseccd</th>\n",
@@ -404,6 +448,7 @@
        "      <th>weburl</th>\n",
        "      <th>dldte</th>\n",
        "      <th>ipodate</th>\n",
+       "      <th>curr_sp500_flag</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -411,7 +456,7 @@
        "      <th>0</th>\n",
        "      <td>001000</td>\n",
        "      <td>1961-12-31</td>\n",
-       "      <td>1961.0</td>\n",
+       "      <td>1961</td>\n",
        "      <td>INDL</td>\n",
        "      <td>C</td>\n",
        "      <td>D</td>\n",
@@ -420,33 +465,33 @@
        "      <td>000032102</td>\n",
        "      <td>A &amp; E PLASTIK PAK INC</td>\n",
        "      <td>...</td>\n",
-       "      <td>01</td>\n",
        "      <td>3089</td>\n",
-       "      <td>325.0</td>\n",
-       "      <td>978.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>325</td>\n",
+       "      <td>978</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>1978-06-30</td>\n",
-       "      <td>None</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 982 columns</p>\n",
+       "<p>1 rows × 983 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate   fyear indfmt consol popsrc datafmt   tic      cusip  \\\n",
-       "0  001000  1961-12-31  1961.0   INDL      C      D     STD  AE.2  000032102   \n",
+       "    gvkey    datadate  fyear indfmt consol popsrc datafmt   tic      cusip  \\\n",
+       "0  001000  1961-12-31   1961   INDL      C      D     STD  AE.2  000032102   \n",
        "\n",
-       "                    conm  ... priusa   sic spcindcd spcseccd  spcsrc  state  \\\n",
-       "0  A & E PLASTIK PAK INC  ...     01  3089    325.0    978.0    None   None   \n",
+       "                    conm  ...   sic spcindcd spcseccd spcsrc  state  stko  \\\n",
+       "0  A & E PLASTIK PAK INC  ...  3089      325      978   <NA>   <NA>     0   \n",
        "\n",
-       "  stko weburl       dldte ipodate  \n",
-       "0  0.0   None  1978-06-30    None  \n",
+       "  weburl       dldte ipodate curr_sp500_flag  \n",
+       "0   <NA>  1978-06-30    <NA>             0.0  \n",
        "\n",
-       "[1 rows x 982 columns]"
+       "[1 rows x 983 columns]"
       ]
      },
      "execution_count": null,
@@ -464,7 +509,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "raw = get_raw_data(vars = ['at', 'lt'], start_date='01/01/2021', end_date='01/01/2022', nrows=1)"
@@ -527,7 +585,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "raw = get_raw_data(start_date='01/01/2021', end_date='01/01/2023')"
@@ -561,25 +632,25 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>ceq</th>\n",
-       "      <th>dltr</th>\n",
+       "      <th>dd1</th>\n",
+       "      <th>naicsh</th>\n",
+       "      <th>sstk</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>txp</th>\n",
+       "      <th>xsga</th>\n",
+       "      <th>ivst</th>\n",
        "      <th>exchg</th>\n",
-       "      <th>act</th>\n",
-       "      <th>prcc_f</th>\n",
-       "      <th>dp</th>\n",
-       "      <th>aqc</th>\n",
-       "      <th>at</th>\n",
        "      <th>...</th>\n",
-       "      <th>wcap</th>\n",
-       "      <th>re</th>\n",
+       "      <th>ib</th>\n",
+       "      <th>xrd</th>\n",
+       "      <th>dltis</th>\n",
+       "      <th>drc</th>\n",
        "      <th>cik</th>\n",
-       "      <th>dlc</th>\n",
-       "      <th>pi</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>rdip</th>\n",
-       "      <th>xint</th>\n",
-       "      <th>rect</th>\n",
-       "      <th>sppe</th>\n",
+       "      <th>ivncf</th>\n",
+       "      <th>capx</th>\n",
+       "      <th>txdb</th>\n",
+       "      <th>pstk</th>\n",
+       "      <th>ceq</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -590,7 +661,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, ceq, dltr, exchg, act, prcc_f, dp, aqc, at, drc, fyear, che, cusip, txdi, xrent, ni, ppent, dvpsx_f, ppegt, pstk, txditc, naics, oancf, sstk, fyr, dltt, sich, xsga, dd1, dpact, oibdp, dltis, invt, fic, pstkl, intan, pifo, drlt, dv, pstkrv, revt, fincf, cogs, ivst, ajex, ib, mib, xpp, xrd, txdb, tstk, lt, tic, sale, prstkc, txfo, ivncf, txt, dvc, itcb, ivao, emp, lct, txp, gdwl, seq, xad, dvp, xacc, naicsh, capx, sic, csho, wcap, re, cik, dlc, pi, ap, rdip, xint, rect, sppe]\n",
+       "Columns: [gvkey, datadate, dd1, naicsh, sstk, sic, txp, xsga, ivst, exchg, invt, seq, lt, dpact, drlt, rdip, aqc, fyr, txditc, txfo, tstk, csho, dv, dltt, lct, dp, ajex, dltr, re, ppegt, act, sppe, emp, pi, itcb, txt, prstkc, fyear, xint, fincf, sale, xad, ap, at, ivao, dlc, xrent, prcc_f, mib, oibdp, xpp, pstkl, sich, fic, che, ni, cogs, cusip, intan, xacc, naics, ppent, wcap, pifo, pstkrv, gdwl, oancf, revt, dvp, txdi, dvpsx_f, rect, tic, dvc, ib, xrd, dltis, drc, cik, ivncf, capx, txdb, pstk, ceq]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 84 columns]"
@@ -676,29 +747,29 @@
        "      <th></th>\n",
        "      <th>datadate</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>ceq</th>\n",
-       "      <th>dltr</th>\n",
+       "      <th>dd1</th>\n",
+       "      <th>naicsh</th>\n",
+       "      <th>sstk</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>txp</th>\n",
+       "      <th>xsga</th>\n",
+       "      <th>ivst</th>\n",
        "      <th>exchg</th>\n",
-       "      <th>act</th>\n",
-       "      <th>prcc_f</th>\n",
-       "      <th>dp</th>\n",
-       "      <th>aqc</th>\n",
-       "      <th>at</th>\n",
        "      <th>...</th>\n",
-       "      <th>wcap</th>\n",
-       "      <th>re</th>\n",
+       "      <th>ib</th>\n",
+       "      <th>xrd</th>\n",
+       "      <th>dltis</th>\n",
+       "      <th>drc</th>\n",
        "      <th>cik</th>\n",
-       "      <th>dlc</th>\n",
-       "      <th>pi</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>rdip</th>\n",
-       "      <th>xint</th>\n",
-       "      <th>rect</th>\n",
-       "      <th>sppe</th>\n",
+       "      <th>ivncf</th>\n",
+       "      <th>capx</th>\n",
+       "      <th>txdb</th>\n",
+       "      <th>pstk</th>\n",
+       "      <th>ceq</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gvkey</th>\n",
-       "      <th>Adate</th>\n",
+       "      <th>Ydate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -730,7 +801,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, ceq, dltr, exchg, act, prcc_f, dp, aqc, at, drc, fyear, che, cusip, txdi, xrent, ni, ppent, dvpsx_f, ppegt, pstk, txditc, naics, oancf, sstk, fyr, dltt, sich, xsga, dd1, dpact, oibdp, dltis, invt, fic, pstkl, intan, pifo, drlt, dv, pstkrv, revt, fincf, cogs, ivst, ajex, ib, mib, xpp, xrd, txdb, tstk, lt, tic, sale, prstkc, txfo, ivncf, txt, dvc, itcb, ivao, emp, lct, txp, gdwl, seq, xad, dvp, xacc, naicsh, capx, sic, csho, wcap, re, cik, dlc, pi, ap, rdip, xint, rect, sppe]\n",
+       "Columns: [datadate, dtdate, dd1, naicsh, sstk, sic, txp, xsga, ivst, exchg, invt, seq, lt, dpact, drlt, rdip, aqc, fyr, txditc, txfo, tstk, csho, dv, dltt, lct, dp, ajex, dltr, re, ppegt, act, sppe, emp, pi, itcb, txt, prstkc, fyear, xint, fincf, sale, xad, ap, at, ivao, dlc, xrent, prcc_f, mib, oibdp, xpp, pstkl, sich, fic, che, ni, cogs, cusip, intan, xacc, naics, ppent, wcap, pifo, pstkrv, gdwl, oancf, revt, dvp, txdi, dvpsx_f, rect, tic, dvc, ib, xrd, dltis, drc, cik, ivncf, capx, txdb, pstk, ceq]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 84 columns]"
@@ -863,7 +934,7 @@
        "      <th>pref_stock</th>\n",
        "      <th>shreq</th>\n",
        "      <th>bookeq</th>\n",
-       "      <th>bookeq_w_itcb</th>\n",
+       "      <th>tobinq</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -878,7 +949,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gvkey</th>\n",
-       "      <th>Adate</th>\n",
+       "      <th>Ydate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -905,15 +976,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 34 columns</p>\n",
+       "<p>0 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
+       "Columns: [sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 34 columns]"
+       "[0 rows x 33 columns]"
       ]
      },
      "execution_count": null,
@@ -935,6 +1006,20 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
