--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -50,7 +50,7 @@
     "LINK_LIBRARY = 'crsp'\n",
     "LINK_TABLE = 'ccmxpf_lnkhist'\n",
     "COMPANY_TABLE = 'company' #contains some header information that is missing from comp.funda (e.g. sic and naics) \n",
-    "FREQ = 'A'\n",
+    "FREQ = 'Y'\n",
     "MIN_YEAR = 1950\n",
     "MAX_YEAR = None\n",
     "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
@@ -83,7 +83,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -97,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "987"
+       "np.int64(988)"
       ]
      },
      "execution_count": null,
@@ -188,9 +199,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'a.at,a.lt'"
+       "'a.lt,a.at'"
       ]
      },
      "execution_count": null,
@@ -255,6 +276,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -286,7 +319,6 @@
        "      <th>consol</th>\n",
        "      <th>popsrc</th>\n",
        "      <th>...</th>\n",
-       "      <th>priusa</th>\n",
        "      <th>sic</th>\n",
        "      <th>spcindcd</th>\n",
        "      <th>spcseccd</th>\n",
@@ -296,6 +328,7 @@
        "      <th>weburl</th>\n",
        "      <th>dldte</th>\n",
        "      <th>ipodate</th>\n",
+       "      <th>curr_sp500_flag</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -307,38 +340,38 @@
        "      <td>P</td>\n",
        "      <td>001000</td>\n",
        "      <td>1970-12-31</td>\n",
-       "      <td>1970.0</td>\n",
+       "      <td>1970</td>\n",
        "      <td>INDL</td>\n",
        "      <td>C</td>\n",
        "      <td>D</td>\n",
        "      <td>...</td>\n",
-       "      <td>01</td>\n",
        "      <td>3089</td>\n",
-       "      <td>325.0</td>\n",
-       "      <td>978.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>325</td>\n",
+       "      <td>978</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>1978-06-30</td>\n",
-       "      <td>None</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 986 columns</p>\n",
+       "<p>1 rows × 987 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    permno   permco liid linkprim   gvkey    datadate   fyear indfmt consol  \\\n",
-       "0  25881.0  23369.0   01        P  001000  1970-12-31  1970.0   INDL      C   \n",
+       "    permno   permco liid linkprim   gvkey    datadate  fyear indfmt consol  \\\n",
+       "0  25881.0  23369.0   01        P  001000  1970-12-31   1970   INDL      C   \n",
        "\n",
-       "  popsrc  ... priusa   sic spcindcd spcseccd spcsrc state stko weburl  \\\n",
-       "0      D  ...     01  3089    325.0    978.0   None  None  0.0   None   \n",
+       "  popsrc  ...   sic spcindcd spcseccd spcsrc state stko weburl       dldte  \\\n",
+       "0      D  ...  3089      325      978   <NA>  <NA>    0   <NA>  1978-06-30   \n",
        "\n",
-       "        dldte  ipodate  \n",
-       "0  1978-06-30     None  \n",
+       "   ipodate  curr_sp500_flag  \n",
+       "0     <NA>              0.0  \n",
        "\n",
-       "[1 rows x 986 columns]"
+       "[1 rows x 987 columns]"
       ]
      },
      "execution_count": null,
@@ -356,7 +389,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "raw = get_raw_data(vars = ['at', 'lt'], start_date='01/01/2021', end_date='01/01/2022', nrows=1)"
@@ -394,8 +440,8 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>at</th>\n",
        "      <th>lt</th>\n",
+       "      <th>at</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -405,7 +451,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, at, lt]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, lt, at]\n",
        "Index: []"
       ]
      },
@@ -423,7 +469,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 921202 rows in comp.funda.\n",
+      "Approximately 55294 rows in comp.company.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "raw = get_raw_data(start_date='01/01/2021', end_date='01/01/2023')"
@@ -461,21 +520,21 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>rect</th>\n",
-       "      <th>sich</th>\n",
-       "      <th>cik</th>\n",
-       "      <th>fyr</th>\n",
+       "      <th>emp</th>\n",
+       "      <th>capx</th>\n",
+       "      <th>csho</th>\n",
+       "      <th>oancf</th>\n",
        "      <th>...</th>\n",
-       "      <th>ceq</th>\n",
-       "      <th>dltt</th>\n",
-       "      <th>ppegt</th>\n",
-       "      <th>txdi</th>\n",
-       "      <th>dltis</th>\n",
-       "      <th>sstk</th>\n",
-       "      <th>drc</th>\n",
-       "      <th>rdip</th>\n",
-       "      <th>cusip</th>\n",
-       "      <th>txfo</th>\n",
+       "      <th>ivao</th>\n",
+       "      <th>ib</th>\n",
+       "      <th>revt</th>\n",
+       "      <th>xint</th>\n",
+       "      <th>xpp</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>drlt</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>ppent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -486,7 +545,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, rect, sich, cik, fyr, ajex, pifo, ivao, exchg, fyear, sppe, itcb, dvc, drlt, capx, xpp, tstk, ivst, xacc, gdwl, emp, dlc, oancf, txp, dd1, oibdp, ivncf, prcc_f, xrd, dvpsx_f, re, aqc, txditc, seq, ppent, xint, ib, mib, dpact, intan, fincf, dv, csho, che, dltr, ni, invt, tic, pi, act, lt, lct, xsga, revt, xrent, pstkrv, sale, txt, prstkc, dvp, at, txdb, sic, naicsh, fic, naics, pstk, wcap, cogs, pstkl, xad, ap, dp, ceq, dltt, ppegt, txdi, dltis, sstk, drc, rdip, cusip, txfo]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, emp, capx, csho, oancf, ppegt, fic, ivst, at, dp, fyear, wcap, ni, ivncf, dvp, txdb, tstk, xrd, txp, ceq, che, pstk, dvc, seq, re, invt, pifo, mib, dd1, pi, pstkrv, txfo, exchg, gdwl, dvpsx_f, lt, txdi, ajex, dltis, prcc_f, xad, fyr, rdip, txt, rect, sstk, cusip, txditc, xrent, dlc, prstkc, dltt, lct, ap, dltr, pstkl, drc, fincf, act, dpact, sale, itcb, intan, sppe, aqc, sich, tic, naicsh, dv, cogs, oibdp, xacc, xsga, ivao, ib, revt, xint, xpp, sic, drlt, cik, naics, ppent]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -577,25 +636,25 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>rect</th>\n",
-       "      <th>sich</th>\n",
-       "      <th>cik</th>\n",
-       "      <th>fyr</th>\n",
+       "      <th>emp</th>\n",
+       "      <th>capx</th>\n",
+       "      <th>csho</th>\n",
+       "      <th>oancf</th>\n",
        "      <th>...</th>\n",
-       "      <th>ceq</th>\n",
-       "      <th>dltt</th>\n",
-       "      <th>ppegt</th>\n",
-       "      <th>txdi</th>\n",
-       "      <th>dltis</th>\n",
-       "      <th>sstk</th>\n",
-       "      <th>drc</th>\n",
-       "      <th>rdip</th>\n",
-       "      <th>cusip</th>\n",
-       "      <th>txfo</th>\n",
+       "      <th>ivao</th>\n",
+       "      <th>ib</th>\n",
+       "      <th>revt</th>\n",
+       "      <th>xint</th>\n",
+       "      <th>xpp</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>drlt</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>ppent</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
-       "      <th>Adate</th>\n",
+       "      <th>Ydate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -627,7 +686,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, rect, sich, cik, fyr, ajex, pifo, ivao, exchg, fyear, sppe, itcb, dvc, drlt, capx, xpp, tstk, ivst, xacc, gdwl, emp, dlc, oancf, txp, dd1, oibdp, ivncf, prcc_f, xrd, dvpsx_f, re, aqc, txditc, seq, ppent, xint, ib, mib, dpact, intan, fincf, dv, csho, che, dltr, ni, invt, tic, pi, act, lt, lct, xsga, revt, xrent, pstkrv, sale, txt, prstkc, dvp, at, txdb, sic, naicsh, fic, naics, pstk, wcap, cogs, pstkl, xad, ap, dp, ceq, dltt, ppegt, txdi, dltis, sstk, drc, rdip, cusip, txfo]\n",
+       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, emp, capx, csho, oancf, ppegt, fic, ivst, at, dp, fyear, wcap, ni, ivncf, dvp, txdb, tstk, xrd, txp, ceq, che, pstk, dvc, seq, re, invt, pifo, mib, dd1, pi, pstkrv, txfo, exchg, gdwl, dvpsx_f, lt, txdi, ajex, dltis, prcc_f, xad, fyr, rdip, txt, rect, sstk, cusip, txditc, xrent, dlc, prstkc, dltt, lct, ap, dltr, pstkl, drc, fincf, act, dpact, sale, itcb, intan, sppe, aqc, sich, tic, naicsh, dv, cogs, oibdp, xacc, xsga, ivao, ib, revt, xint, xpp, sic, drlt, cik, naics, ppent]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -760,7 +819,7 @@
        "      <th>pref_stock</th>\n",
        "      <th>shreq</th>\n",
        "      <th>bookeq</th>\n",
-       "      <th>bookeq_w_itcb</th>\n",
+       "      <th>tobinq</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -775,7 +834,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
-       "      <th>Adate</th>\n",
+       "      <th>Ydate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -801,57 +860,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10026</th>\n",
+       "      <th>10026.0</th>\n",
        "      <th>2021</th>\n",
        "      <td>2050</td>\n",
        "      <td>311812</td>\n",
        "      <td>152.82</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>2916.41688</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>845.654</td>\n",
        "      <td>907.232</td>\n",
-       "      <td>907.232</td>\n",
+       "      <td>2.790368</td>\n",
        "      <td>...</td>\n",
        "      <td>104.998</td>\n",
        "      <td>101.499</td>\n",
        "      <td>101.499</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0.259461</td>\n",
        "      <td>0.053934</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 34 columns</p>\n",
+       "<p>1 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             sic_full naics_full  stock_price  lag_at      mktcap  pstk0  \\\n",
-       "permno Adate                                                               \n",
-       "10026  2021      2050     311812       152.82     NaN  2916.41688    0.0   \n",
+       "              sic_full naics_full  stock_price  lag_at      mktcap  pstk0  \\\n",
+       "permno  Ydate                                                               \n",
+       "10026.0 2021      2050     311812       152.82    <NA>  2916.41688    0.0   \n",
        "\n",
-       "              pref_stock    shreq   bookeq  bookeq_w_itcb  ...  cflow_is  \\\n",
-       "permno Adate                                               ...             \n",
-       "10026  2021          0.0  845.654  907.232        907.232  ...   104.998   \n",
+       "               pref_stock    shreq   bookeq    tobinq  ...  cflow_is  \\\n",
+       "permno  Ydate                                          ...             \n",
+       "10026.0 2021          0.0  845.654  907.232  2.790368  ...   104.998   \n",
        "\n",
-       "              cflow_cfs  cflow_full  cflow_is_2la  cflow_cfs_2la  \\\n",
-       "permno Adate                                                       \n",
-       "10026  2021     101.499     101.499           NaN            NaN   \n",
+       "               cflow_cfs  cflow_full  cflow_is_2la  cflow_cfs_2la  \\\n",
+       "permno  Ydate                                                       \n",
+       "10026.0 2021     101.499     101.499          <NA>           <NA>   \n",
        "\n",
-       "              cflow_full_2la   cash_2a   booklev  dividends_2la  \\\n",
-       "permno Adate                                                      \n",
-       "10026  2021              NaN  0.259461  0.053934            NaN   \n",
+       "               cflow_full_2la   cash_2a   booklev  dividends_2la  \\\n",
+       "permno  Ydate                                                      \n",
+       "10026.0 2021             <NA>  0.259461  0.053934           <NA>   \n",
        "\n",
-       "              repurchases_2la  \n",
-       "permno Adate                   \n",
-       "10026  2021               NaN  \n",
+       "               repurchases_2la  \n",
+       "permno  Ydate                   \n",
+       "10026.0 2021              <NA>  \n",
        "\n",
-       "[1 rows x 34 columns]"
+       "[1 rows x 33 columns]"
       ]
      },
      "execution_count": null,
