--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -133,7 +133,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 2835219 rows in wrdsapps_finratio_ibes.firm_ratio_ibes.\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "all_vars = list_all_vars()"
@@ -147,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "100"
+       "np.int64(100)"
       ]
      },
      "execution_count": null,
@@ -191,7 +201,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "raw = get_raw_data(start_date='01/01/2021', nrows=1000)"
@@ -397,13 +416,13 @@
        "      <td>17.302839</td>\n",
        "      <td>24.574843</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>GOVT</td>\n",
        "      <td>37</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>HON</td>\n",
        "      <td>43851610</td>\n",
@@ -424,11 +443,11 @@
        "\n",
        "                ffi30_desc  ffi30  ffi38_desc  ffi38  ffi48_desc  ffi48  \\\n",
        "permno Mdate                                                              \n",
-       "10145  2021-01         NaN    NaN        GOVT     37         NaN    NaN   \n",
+       "10145  2021-01        <NA>    NaN        GOVT     37        <NA>    NaN   \n",
        "\n",
        "                ffi49_desc  ffi49  ticker     cusip  \n",
        "permno Mdate                                         \n",
-       "10145  2021-01         NaN    NaN     HON  43851610  \n",
+       "10145  2021-01        <NA>    NaN     HON  43851610  \n",
        "\n",
        "[1 rows x 100 columns]"
       ]
